--- a/.github/linters/.golangci.yml
+++ b/.github/linters/.golangci.yml
@@ -12,10 +12,6 @@ linters-settings:
     # report about shadowed variables
     check-shadowing: true
 
-  golint:
-    # minimal confidence for issues, default is 0.8
-    min-confidence: 0.8
-
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
     simplify: true
@@ -23,7 +19,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: github.com/action-pre-commit/
+    local-prefixes: github.com/hadenlabs/
 
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
@@ -100,7 +96,6 @@ linters:
     - goimports
     - gofmt # We enable this as well as goimports for its simplify mode.
     - prealloc
-    - golint
     - unconvert
     - misspell
     - nakedret
@@ -117,6 +112,7 @@ linters:
     - testpackage
     - goerr113
     - scopelint
+    - golint
 
     # Drives todos nuts
     - godox
@@ -133,6 +129,7 @@ issues:
         - gosec
         - scopelint
         - unparam
+        - golint
 
     # - text: "should have a package comment"
     #   linters:
