refactor: task actions (#108)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,11 @@
 default_stages:
   - commit
+exclude: >
+  (?x)^(
+    ^(\/|)vendor\/(.*?)$|
+    .+\.node_modules\/.*$|
+    .+\.lock$|
+  )$
 
 repos:
   - repo: https://github.com/codespell-project/codespell
@@ -7,12 +13,6 @@ repos:
     hooks:
       - id: codespell
         args: [--ignore-words=.codespell-ignores]
-        exclude: >
-          (?x)^(
-            .+\.vendor\/.*$|
-            .+\.node_modules\/.*$|
-            .+\.lock$|
-          )$
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
     rev: v8.0.0
     hooks:
@@ -22,7 +22,7 @@ repos:
         args:
           - --config=.ci/linters/.commitlintrc.json
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
       - id: detect-private-key
         files: ^(?!\.?git-crypt)
@@ -37,6 +37,8 @@ repos:
       - id: check-json
       - id: check-xml
       - id: check-yaml
+        args:
+          - --allow-multiple-documents
       - id: check-byte-order-marker
       - id: check-ast
       - id: debug-statements
@@ -47,7 +49,7 @@ repos:
       - id: fix-encoding-pragma
       - id: sort-simple-yaml
   - repo: https://github.com/hadenlabs/pre-commit-hooks
-    rev: 47e07f691058d12b2f8f49912b5568654d26331f
+    rev: e50751c9323b0a03f27271c57513f5c389f6591b
     hooks:
       - id: do-not-commit
       - id: markdown-link-check
@@ -62,7 +64,6 @@ repos:
           )$
         args:
           - --exclude=SC1072,SC1073,SC2068
-      - id: todocheck
       - id: gitleaks
         args:
           - --path=.
