--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -34,14 +34,16 @@ dotenv:
 
 vars:
   PROJECT_NAME: resume
+  GROUP_NAME: luismayta
   ORGANIZATION: luismayta
   REVIEWERS: luismayta
-  PYTHON_VERSION: 3.9.2
+  PYTHON_VERSION: 3.10.6
   NODE_VERSION: 16.6.1
-  GIT_IGNORES: python,node,go,latex,zsh,sonar
+  GIT_IGNORES: python,node,go,zsh,sonar,java,maven,intellij+all,terraform,linux
+  DOCKER_PLATFORMS: linux/amd64
   GOLANGCI_VERSION: 1.42.0
   README_FILE: README.md
-  GIT_IGNORES_CUSTOM: >-
+  GIT_IGNORES_CUSTOM: |
     bin
     .scannerwork
     .secrets
@@ -52,6 +54,7 @@ vars:
     *.lock.hcl
     *.zip
     .external_modules
+    vendor
 
 tasks:
   default:
