fix: configuration sonarqube (#121)

--- a/.github/workflows/confluence.yml
+++ b/.github/workflows/confluence.yml
@@ -1,7 +1,11 @@
 name: confluence
 
 on:
-  push:
+  workflow_run:
+    workflows:
+      - lint-code
+    types:
+      - completed
     branches:
       - develop
       - main
