--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,9 @@
 sonar.organization=luismayta
 sonar.projectKey=luismayta:resume
+sonar.projectName=resume
+sonar.projectVersion=0.1.0
 sonar.projectBaseDir=./
 sonar.sources=./
 sonar.coverage.dtdVerification=false
-sonar.coverage.exclusions=**/__init__.py
+sonar.coverage.exclusions=provision
 sonar.sourceEncoving=UTF-8
