--- a/.gitignore
+++ b/.gitignore
@@ -472,6 +472,11 @@ cython_debug/
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
+# ruff
+.ruff_cache/
+
+# LSP config files
+pyrightconfig.json
 
 ### Sonar ###
 #Sonar generated dir
@@ -521,6 +526,12 @@ terraform.rc
 # Zsh completion-optimization dumpfile
 *zcompdump*
 
+# Zsh history
+.zsh_history
+
+# Zsh sessions
+.zsh_sessions
+
 # Zsh zcalc history
 .zcalc_history
 
@@ -552,7 +563,9 @@ TMP_CHANGELOG.md
 .task
 .terraform.lock.hcl
 *.lock.hcl
+*.lock
 *.zip
 .external_modules
 vendor
+.DS_Store
 
