--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,4 +1,5 @@
-version: '3'
+---
+version: "3"
 
 includes:
   changelog: ./provision/task/changelog.yml
@@ -36,11 +37,15 @@ vars:
   PROJECT_NAME: resume
   GROUP_NAME: luismayta
   ORGANIZATION: luismayta
+  DOCKER_PLATFORM: linux/amd64
   REVIEWERS: luismayta
-  PYTHON_VERSION: 3.10.6
+  PYTHON_VERSION: 3.11.5
   NODE_VERSION: 16.6.1
+  TERRAFORM_VERSION: 1.5.5
   GIT_IGNORES: python,node,go,zsh,sonar,java,maven,intellij+all,terraform,linux
-  DOCKER_PLATFORMS: linux/amd64
+  COMMIT: $(git rev-parse HEAD)
+  RELEASE_DIR: ./release
+  DATE: $(date +%s)
   GOLANGCI_VERSION: 1.42.0
   README_FILE: README.md
   GIT_IGNORES_CUSTOM: |
@@ -52,9 +57,11 @@ vars:
     .task
     .terraform.lock.hcl
     *.lock.hcl
+    *.lock
     *.zip
     .external_modules
     vendor
+    .DS_Store
 
 tasks:
   default:
@@ -69,7 +76,7 @@ tasks:
     silent: true
 
   summary:
-    desc: 'Summary information'
+    desc: "Summary information"
     cmds:
       - echo Go available {{.GO}}
       - echo Python available {{.PYTHON}}
@@ -78,7 +85,7 @@ tasks:
     silent: true
 
   check:
-    desc: 'Check all dependencies'
+    desc: "Check all dependencies"
     deps:
       - python:check
       - changelog:check
@@ -104,11 +111,10 @@ tasks:
       - task: prettier:all
 
   upgrade:
-    run: once
     desc: Execute upgrade packages
     cmds:
-      - >-
-        pipenv run pre-commit autoupdate
+      - poetry update
+      - poetry run pre-commit autoupdate
 
   setup:
     desc: Setup dependences of project
