--- a/provision/task/go.yml
+++ b/provision/task/go.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 env:
   GO_FILES:
@@ -19,28 +19,28 @@ tasks:
     run: once
     preconditions:
       - sh: command -v go
-        msg: 'Please Install Go'
+        msg: "Please Install Go"
 
   check:gofmt:
     desc: Exist gofmt
     run: once
     preconditions:
       - sh: command -v gofmt
-        msg: 'Please Install gofmt'
+        msg: "Please Install gofmt"
 
   check:golangcilint:
     desc: Exist golangci-lint
     run: once
     preconditions:
       - sh: command -v golangci-lint
-        msg: 'Please Install golangci-lint'
+        msg: "Please Install golangci-lint"
 
   check:goreleaser:
     desc: Exist goreleaser
     run: once
     preconditions:
       - sh: command -v goreleaser
-        msg: 'Please Install goreleaser'
+        msg: "Please Install goreleaser"
 
   setup:
     desc: Setup go dependences.
@@ -52,6 +52,12 @@ tasks:
       - go generate -v ./...
     deps:
       - task: check:go
+
+  prettier:
+    desc: format files go.
+    run: once
+    cmds:
+      - task: fmt
 
   fmt:
     desc: format files go.
@@ -85,13 +91,29 @@ tasks:
     deps:
       - task: check:go
 
+  mockery:
+    desc: Refreshes the mock implementations in ./mocks.
+    preconditions:
+      - sh: which mockery
+        msg: mockery is not installed. Please install it using the following command.
+
+          $ go install github.com/vektra/mockery/v2@v2.38.0
+    cmds:
+      - mockery --config .ci/config/mockery.yaml
+
+  generate:
+    desc: "Generate code with Wire"
+    cmds:
+      - go get github.com/google/wire/cmd/wire
+      - wire ./...
+
   test:
     desc: Run go test against code.
     run: once
-    cmds:
-      - go test -v ./... -coverprofile cover.out -timeout 60m
     deps:
       - task: check:go
+    cmds:
+      - go test -race -v ./... -coverprofile cover.out -timeout 60m
 
   build:
     desc: Build go packages.
