--- a/.ci/linters/.gitleaks.toml
+++ b/.ci/linters/.gitleaks.toml
@@ -154,43 +154,14 @@ title = "gitleaks config"
 
 [[rules]]
     description = "Env Var"
-    regex = '''(?i)(apikey|secret|key|api|password|pass)=[0-9a-zA-Z-_.{}]{4,120}'''
+    regex = '''(?i)(apikey|secret|key|api|password|pass|pw|host)=[0-9a-zA-Z-_.{}]{4,120}'''
     tags = ["env"]
     [rules.allowlist]
         description = "ignore value fake"
         regexes = [
             '''host=HOST''',
             '''--private-key={{.PRIVATE_KEY_FILE}}''',
-        ]
-
-[[rules]]
-    description = "Email"
-    regex = '''[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}'''
-    tags = ["email"]
-    [rules.allowlist]
-        description = "ignore emails"
-        regexes = [
-            '''[a-zA-Z0-9._%+-]+@users.noreply.github.com''',
-            '''[a-zA-Z0-9._%+-]+@yopmail.com''',
-            '''git@github.com''',
-            '''git@gitlab.com''',
-            '''slovacus@gmail.com''',
-            '''luis@hadenlabs.com''',
-            '''security@hadenlabs.com''',
-            '''hola@hadenlabs.com''',
-            '''hello@hadenlabs.com''',
-            '''support@hadenlbas.com''',
-            '''support@hadenlabs.com''',
-            '''dum-u@hadenlabs.com''',
-            '''adrien+dev@schischi.me''',
-            '''honza@egoistic.biz''',
-            '''jdekoning@javydekoning.com''',
-            '''liantze@gmail.com''',
-            '''taboada.al@hotmail.com''',
-            '''xdanaux@gmail.com''',
-            '''xxx@luismayta.me''',
-            '''adrien+dev@schischi.me''',
-            '''yuanbin2014@gmail.com''',
+            '''PASSWORD=XXXXXX''',
         ]
 
 [[rules]]
@@ -233,11 +204,19 @@ title = "gitleaks config"
     description = "Files with keys and credentials"
     file = '''(?i)(id_rsa|passwd|id_rsa.pub|pgpass)$'''
     tags = ["key", "files"]
+    [rules.allowlist]
+        description = "ignore some"
+        files = ['''(.*pub|env)$''']
 
 [[rules]]
     description = "Extension Files with keys and credentials"
     file = '''(.*?)(pub|pem|ppk|key)$'''
     tags = ["key", "files"]
+    [rules.allowlist]
+        description = "ignore file test"
+        files = [
+          '''.*-test.*$''',
+        ]
 
 # Global allowlist
 [allowlist]
@@ -268,6 +247,14 @@ title = "gitleaks config"
 
 [whitelist]
   description = "image and html allowlists"
+  paths = [
+    '''^vendor/''',
+    '''^bower_components/''',
+    '''^public/''',
+    '''^node_modules/''',
+    '''^theme/''',
+  ]
+
   files = [
     '''(.*?)(jpg|gif|png|doc|pdf|bin|mp3|mp4|mov|ttf|woff|woff2|eot|lock)$''',
     '''^\.gitignore$''',
@@ -275,8 +262,7 @@ title = "gitleaks config"
     '''^\.gitignore$''',
     '''^yarn.lock$''',
     '''^sonar-project.properties$''',
+    '''^test/fixtures/keys/.*-test.*$''',
   ]
-  paths = [
-    '''^vendor/(.*?)$''',
-    '''^node_modules/(.*?)$''',
-  ]
+
+  commits = []
