--- a/.ci/linters/.golangci.yml
+++ b/.ci/linters/.golangci.yml
@@ -19,7 +19,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: github.com/hadenlabs/
+    local-prefixes: github.com/luismayta/
 
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
@@ -99,6 +99,7 @@ linters:
     - unconvert
     - misspell
     - nakedret
+    - unused
 
   presets:
     - bugs
@@ -113,6 +114,17 @@ linters:
     - goerr113
     - scopelint
     - golint
+    - bodyclose
+    - contextcheck
+    - nilerr
+    - noctx
+    - rowserrcheck
+    - sqlclosecheck
+    - structcheck
+    - unparam
+    - deadcode
+    - varcheck
+    - asasalint
 
     # Drives todos nuts
     - godox
