--- a/.ci/linters/.goreleaser.yml
+++ b/.ci/linters/.goreleaser.yml
@@ -66,7 +66,7 @@ changelog:
       - '^test:'
 release:
   github:
-    owner: hadenlabs
+    owner: luismayta
     name: resume
   draft: true
   prerelease: auto
