--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+ci:
+  autoupdate_schedule: monthly
+
 default_stages:
   - commit
 exclude: >
@@ -8,39 +11,43 @@ exclude: >
     .+\.terraform.*$|
     .+\.venv.*$|
     .+\.lock$|
+    .+\.mdx$|
   )$
 
 repos:
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.2.6
     hooks:
       - id: codespell
         args: [--ignore-words=.codespell-ignores]
         exclude: >
           (?x)^(
+            go.mod|
+            go.sum|
+            openapi.yaml|
             .+\.vendor\/.*$|
             .+\.node_modules\/.*$|
             .+\.sops.*$|
             .+\.lock$|
-            go.mod|
-            go.sum|
+            .+\.mdx$|
           )$
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
-    rev: v9.3.0
+    rev: v9.10.0
     hooks:
       - id: commitlint
         stages: [commit-msg]
-        additional_dependencies: ['@hadenlabs/commitlint-config']
+        additional_dependencies: ["@hadenlabs/commitlint-config"]
         args:
           - --config=.ci/linters/.commitlintrc.json
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: detect-private-key
         files: ^(?!\.?git-crypt)
         exclude: >
           (?x)^(
             .+\.gitleaks.toml$|
+            test/fixtures/keys/.*-test.*$
           )$
       - id: check-merge-conflict
       - id: check-added-large-files
@@ -60,6 +67,10 @@ repos:
       - id: file-contents-sorter
       - id: fix-encoding-pragma
       - id: sort-simple-yaml
+  - repo: https://github.com/psf/black
+    rev: 23.11.0
+    hooks:
+      - id: black
   - repo: https://github.com/hadenlabs/pre-commit-hooks
     rev: e50751c9323b0a03f27271c57513f5c389f6591b
     hooks:
@@ -69,6 +80,8 @@ repos:
           - --config=.ci/linters/markdown-link-config.json
         exclude: >
           (?x)^(
+            .+\.docs/env-vars.md$|
+            docs/env-vars.md$|
             docs\/include\/terraform.md$|
             .+\.tpl.md$|
           )$
