--- a/provision/task/docker.yml
+++ b/provision/task/docker.yml
@@ -1,4 +1,5 @@
-version: '3'
+---
+version: "3"
 
 tasks:
   check:
@@ -12,18 +13,18 @@ tasks:
     run: once
     preconditions:
       - sh: command -v docker
-        msg: 'Please Install docker'
+        msg: "Please Install docker"
 
   check:vars:
     desc: Exist vars for docker
     run: once
     preconditions:
       - sh: test -v CI_REGISTRY_USER
-        msg: 'Please add var environment CI_REGISTRY_USER'
+        msg: "Please add var environment CI_REGISTRY_USER"
       - sh: test -v CI_REGISTRY_PASSWORD
-        msg: 'Please add var environment CI_REGISTRY_PASSWORD'
+        msg: "Please add var environment CI_REGISTRY_PASSWORD"
       - sh: test -v CI_REGISTRY
-        msg: 'Please add var environment CI_REGISTRY'
+        msg: "Please add var environment CI_REGISTRY"
 
   login:
     silent: true
@@ -42,7 +43,8 @@ tasks:
     cmds:
       - >-
         docker build
-        --platform={{.DOCKER_PLATFORMS}}
+        --no-cache
+        --platform={{.DOCKER_PLATFORM}}
         --file Dockerfile
         --tag {{.CI_REGISTRY}}/{{.GROUP_NAME}}/{{.PROJECT_NAME}}:{{.APP_TAG}} .
         --build-arg VERSION={{.APP_TAG}}
@@ -56,7 +58,7 @@ tasks:
       - >-
         docker buildx build
         --no-cache
-        --platform={{.DOCKER_PLATFORMS}}
+        --platform={{.DOCKER_PLATFORM}}
         --file Dockerfile
         --tag {{.CI_REGISTRY}}/{{.GROUP_NAME}}/{{.PROJECT_NAME}}:{{.APP_TAG}} .
         --build-arg VERSION={{.APP_TAG}}
